--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <title>MAST</title>
   </head>
-  <body>
+  <body style="background-color: #F6F8F8;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
