working on post for upload course offering

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
       rel="stylesheet"
     />
+    <script src="PapaParse/papaparse.js"></script>
 
     <title>MAST</title>
   </head>
