change colors + testing filerenaming

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
 
     <title>MAST</title>
   </head>
-  <body style="background-color: #F6F8F8;">
+  <body style="background-color: #d8eefe5e">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
