add suggested course plan ui

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
   <title>MAST</title>
 </head>
 
-<body style="background-color: #d8eefe5e">
+<body style="background-color: rgba(235, 240, 243, 0.342)">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
